testsuite/bsc.bugs/b418/Tester.bsv.bsc-out.expected
checking package dependencies
compiling ./FPLibrary.bsv
compiling ./FPAdd.bsv
compiling Tester.bsv
Error: "Tester.bsv", line 9, column 18: (T0007)
  Unbound type constructor `IEEE754_32'
